# netkat

./: .bazelrc  .gitignore  BUILD  BUILD.bazel  METADATA  MODULE.bazel  README.md  fuzztest.bazelrc
.github/workflows/: build.yml  ci.yml
gutil/: BUILD.bazel  README.md  proto.cc  proto.h  proto_matchers.h  proto_matchers_test.cc  proto_string_error_collector.h  proto_test.cc  proto_test.proto  status.cc  status.h  status_matchers.h  status_matchers_test.cc  testing.cc  testing.h  testing_test.cc
netkat/: BUILD.bazel  analysis_engine.cc  analysis_engine.h  analysis_engine_counter_example_test.expected  analysis_engine_counter_example_test_runner.cc  analysis_engine_test.cc  counter_example.cc  counter_example.h  counter_example_test.cc  evaluator.cc  evaluator.h  evaluator_test.cc  frontend.cc  frontend.h  frontend_test.cc  gmock_utils.cc  gmock_utils.h  gtest_utils.cc  gtest_utils.h  interned_field.cc  interned_field.h  interned_field_test.cc  interned_policy.cc  interned_policy.h  manager_handle_pattern.md  netkat.proto  netkat_proto_constructors.cc  netkat_proto_constructors.h  netkat_proto_constructors_test.cc  netkat_test.cc  packet.cc  packet.h  packet_field.cc  packet_field.h  packet_field_test.cc  packet_set.cc  packet_set.h  packet_set_benchmark.cc  packet_set_handle.h  packet_set_test.cc  (+33 more)
patches/: fuzztest_20260219.0_abseil_random_internal_compat.patch
registry/modules/abseil-cpp/: metadata.json
registry/modules/abseil-cpp/20260526.0/: MODULE.bazel  source.json
registry/modules/abseil-cpp/20260526.0/patches/: if_constexpr_compat.patch
