# NetKAT, a framework for describing and reasoning about packet-switched networks.

load("@rules_license//rules:license.bzl", "license")

package(
    default_applicable_licenses = [":license"],
    default_visibility = [":__subpackages__"],
)

# Define the license for this package, which is used as the default license
# for all targets in this package based on default_applicable_licenses above.
license(name = "license")

licenses(["notice"])

exports_files(["LICENSE"])
