# Copyright 2024 The NetKAT authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# https://bazel.build/external/overview#bzlmod

module(
    name = "google-netkat",
    version = "0.0.1",
    bazel_compatibility = [">=7.3.2"],
)

bazel_dep(name = "protobuf", version = "35.0", repo_name = "com_google_protobuf")
bazel_dep(name = "abseil-cpp", version = "20260526.0", repo_name = "com_google_absl")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_cc", version = "0.2.18")
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(name = "aspect_rules_esbuild", version = "0.25.1")
bazel_dep(name = "brotli", version = "1.2.0")
bazel_dep(name = "snappy", version = "1.2.2.bcr.3")
bazel_dep(name = "highwayhash", version = "0.0.0-20240305-5ad3bf8.bcr.1")
bazel_dep(name = "googleapis", version = "0.0.0-20260130-c0fcb356")
bazel_dep(name = "googleapis-cc", version = "1.0.0")
bazel_dep(name = "grpc", version = "1.81.0", repo_name = "com_google_grpc")
bazel_dep(name = "gutil", version = "20260309.0", repo_name = "com_google_gutil")
bazel_dep(name = "re2", version = "2025-11-05.bcr.1", repo_name = "com_googlesource_code_re2")

# Dev Dependencies.
bazel_dep(name = "rules_license", version = "1.0.0", dev_dependency = True)
bazel_dep(name = "googletest", version = "1.17.0.bcr.2", dev_dependency = True, repo_name = "com_google_googletest")
bazel_dep(name = "fuzztest", version = "20260219.0", dev_dependency = True, repo_name = "com_google_fuzztest")
bazel_dep(name = "google_benchmark", version = "1.9.4", dev_dependency = True, repo_name = "com_google_benchmark")

single_version_override(
    module_name = "highwayhash",
    version = "0.0.0-20240305-5ad3bf8.bcr.1",
)
