# Copyright 2024 The NetKAT authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# https://bazel.build/external/overview#bzlmod

module(
    name = "google-netkat",
    version = "0.0.1",
    bazel_compatibility = [">=7.3.2"],
    compatibility_level = 1,
)

bazel_dep(name = "protobuf", version = "33.5", repo_name = "com_google_protobuf")
bazel_dep(name = "abseil-cpp", version = "20260526.0", repo_name = "com_google_absl")
bazel_dep(name = "gutil", version = "20260309.0.bcr.1", repo_name = "com_google_gutil")
bazel_dep(name = "re2", version = "2025-11-05.bcr.1", repo_name = "com_googlesource_code_re2")

# Dev Depdencies.
bazel_dep(name = "rules_license", version = "1.0.0", dev_dependency = True)
bazel_dep(name = "googletest", version = "1.17.0.bcr.2", dev_dependency = True, repo_name = "com_google_googletest")
bazel_dep(name = "fuzztest", version = "20260219.0", dev_dependency = True, repo_name = "com_google_fuzztest")
bazel_dep(name = "google_benchmark", version = "1.9.5", dev_dependency = True, repo_name = "com_google_benchmark")

# fuzztest 20260219.0 relies on a transitive include of
# absl/random/internal/distribution_caller.h via absl/random/bit_gen_ref.h,
# which was removed in abseil 20260526.0 as a layering cleanup. Patch it to
# forward-declare those types directly so the friend declarations compile.
single_version_override(
    module_name = "fuzztest",
    patches = ["//patches:fuzztest_20260219.0_abseil_random_internal_compat.patch"],
    patch_strip = 0,
    version = "20260219.0",
)
