


package(
    default_applicable_licenses = ["//:license"],
    default_visibility = [":__subpackages__"],
)

proto_library(
    name = "netkat_proto",
    srcs = ["netkat.proto"],
)

cc_proto_library(
    name = "netkat_cc_proto",
    deps = [":netkat_proto"],
)

cc_test(
    name = "netkat_test",
    srcs = ["netkat_test.cc"],
    deps = [
        ":netkat_cc_proto",
        "@com_google_absl//absl/log",
        "@com_google_fuzztest//fuzztest",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "symbolic_packet",
    hdrs = ["symbolic_packet.h"],
    deps = [
        ":netkat_cc_proto",
        "@com_google_absl//absl/strings:str_format",
    ],
)

cc_test(
    name = "symbolic_packet_test",
    srcs = ["symbolic_packet_test.cc"],
    deps = [
        ":symbolic_packet",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest_main",
    ],
)
