




package(
    default_applicable_licenses = ["//:license"],
    default_visibility = [":__subpackages__"],
)

proto_library(
    name = "netkat_proto",
    srcs = ["netkat.proto"],
)

cc_proto_library(
    name = "netkat_cc_proto",
    deps = [":netkat_proto"],
)

cc_library(
    name = "gtest_utils",
    testonly = 1,
    srcs = ["gtest_utils.cc"],
    hdrs = ["gtest_utils.h"],
    deps = [
        ":frontend",
        "@com_google_fuzztest//fuzztest",
    ],
)

cc_library(
    name = "frontend",
    srcs = ["frontend.cc"],
    hdrs = ["frontend.h"],
    deps = [
        ":netkat_cc_proto",
        ":netkat_proto_constructors",
        "@com_google_absl//absl/strings:string_view",
    ],
)

cc_test(
    name = "frontend_test",
    srcs = ["frontend_test.cc"],
    shard_count = 8,
    deps = [
        ":frontend",
        ":gtest_utils",
        ":netkat_cc_proto",
        ":netkat_proto_constructors",
        "@com_google_absl//absl/strings:string_view",
        "@com_google_fuzztest//fuzztest",
        "@com_google_googletest//:gtest_main",
        "@com_google_gutil//gutil:proto_matchers",
    ],
)

cc_test(
    name = "netkat_test",
    srcs = ["netkat_test.cc"],
    shard_count = 8,
    deps = [
        ":netkat_cc_proto",
        "@com_google_absl//absl/log",
        "@com_google_fuzztest//fuzztest",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "symbolic_packet",
    srcs = ["symbolic_packet.cc"],
    hdrs = ["symbolic_packet.h"],
    deps = [
        ":evaluator",
        ":interned_field",
        ":netkat_cc_proto",
        ":paged_stable_vector",
        "@com_google_absl//absl/container:fixed_array",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_gutil//gutil:status",
    ],
)

cc_test(
    name = "symbolic_packet_test",
    srcs = ["symbolic_packet_test.cc"],
    shard_count = 8,
    deps = [
        ":evaluator",
        ":netkat_proto_constructors",
        ":symbolic_packet",
        "@com_google_absl//absl/base:no_destructor",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/strings",
        "@com_google_fuzztest//fuzztest",
        "@com_google_googletest//:gtest_main",
        "@com_google_gutil//gutil:status_matchers",
    ],
)

cc_library(
    name = "evaluator",
    srcs = ["evaluator.cc"],
    hdrs = ["evaluator.h"],
    deps = [
        ":netkat_cc_proto",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/log",
    ],
)

cc_test(
    name = "evaluator_test",
    srcs = ["evaluator_test.cc"],
    shard_count = 8,
    deps = [
        ":evaluator",
        ":netkat_cc_proto",
        ":netkat_proto_constructors",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_fuzztest//fuzztest",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "netkat_proto_constructors",
    srcs = ["netkat_proto_constructors.cc"],
    hdrs = ["netkat_proto_constructors.h"],
    deps = [
        ":netkat_cc_proto",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/strings:string_view",
    ],
)

cc_test(
    name = "netkat_proto_constructors_test",
    srcs = ["netkat_proto_constructors_test.cc"],
    shard_count = 8,
    deps = [
        ":netkat_cc_proto",
        ":netkat_proto_constructors",
        "@com_google_absl//absl/strings:string_view",
        "@com_google_fuzztest//fuzztest",
        "@com_google_googletest//:gtest_main",
        "@com_google_gutil//gutil:proto_matchers",
    ],
)

cc_library(
    name = "interned_field",
    srcs = ["interned_field.cc"],
    hdrs = ["interned_field.h"],
    deps = [
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/strings:string_view",
        "@com_google_gutil//gutil:status",
    ],
)

cc_test(
    name = "interned_field_test",
    srcs = ["interned_field_test.cc"],
    shard_count = 4,
    deps = [
        ":interned_field",
        "@com_google_absl//absl/base:no_destructor",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest_main",
        "@com_google_gutil//gutil:status_matchers",
    ],
)

cc_library(
    name = "paged_stable_vector",
    hdrs = ["paged_stable_vector.h"],
)

cc_library(
    name = "analysis_engine",
    srcs = ["analysis_engine.cc"],
    hdrs = ["analysis_engine.h"],
    deps = [
        ":frontend",
        ":symbolic_packet",
    ],
)

cc_test(
    name = "analysis_engine_test",
    srcs = ["analysis_engine_test.cc"],
    shard_count = 2,
    deps = [
        ":analysis_engine",
        ":frontend",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "symbolic_packet_transformer",
    srcs = ["symbolic_packet_transformer.cc"],
    hdrs = ["symbolic_packet_transformer.h"],
    deps = [
        ":evaluator",
        ":interned_field",
        ":netkat_cc_proto",
        ":paged_stable_vector",
        ":symbolic_packet",
        "@com_google_absl//absl/algorithm:container",
        "@com_google_absl//absl/container:btree",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/functional:any_invocable",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/strings:string_view",
        "@com_google_gutil//gutil:status",
    ],
)

cc_test(
    name = "paged_stable_vector_test",
    srcs = ["paged_stable_vector_test.cc"],
    shard_count = 4,
    deps = [
        ":paged_stable_vector",
        "@com_google_fuzztest//fuzztest",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "symbolic_packet_transformer_test",
    srcs = ["symbolic_packet_transformer_test.cc"],
    deps = [
        ":evaluator",
        ":netkat_cc_proto",
        ":netkat_proto_constructors",
        ":symbolic_packet",
        ":symbolic_packet_transformer",
        "@com_google_absl//absl/base:no_destructor",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/strings",
        "@com_google_fuzztest//fuzztest",
        "@com_google_googletest//:gtest_main",
        "@com_google_gutil//gutil:status_matchers",
    ],
)
