


load("@com_google_gutil//gutil:diff_test.bzl", "cmd_diff_test")



package(
    default_applicable_licenses = ["//:license"],
    default_visibility = [
        ":__subpackages__",
        "//platforms/networking/orion/routing/netkat:__subpackages__",
    ],
)

proto_library(
    name = "netkat_proto",
    srcs = ["netkat.proto"],
)

cc_proto_library(
    name = "netkat_cc_proto",
    visibility = [
        "//platforms/networking/orion/routing/netkat:__subpackages__",
    ],
    deps = [":netkat_proto"],
)

cc_library(
    name = "gtest_utils",
    testonly = 1,
    srcs = ["gtest_utils.cc"],
    hdrs = ["gtest_utils.h"],
    deps = [
        ":frontend",
        ":netkat_cc_proto",
        "@com_google_fuzztest//fuzztest",
        "@com_google_protobuf//:protobuf",
    ],
)

cc_library(
    name = "frontend",
    srcs = ["frontend.cc"],
    hdrs = ["frontend.h"],
    visibility = [
        "//platforms/networking/orion/routing/netkat:__subpackages__",
    ],
    deps = [
        ":netkat_cc_proto",
        ":netkat_proto_constructors",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:string_view",
        "@com_google_gutil//gutil:status",
    ],
)

cc_test(
    name = "frontend_test",
    srcs = ["frontend_test.cc"],
    shard_count = 8,
    deps = [
        ":frontend",
        ":gtest_utils",
        ":netkat_cc_proto",
        ":netkat_proto_constructors",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:status_matchers",
        "@com_google_absl//absl/strings:string_view",
        "@com_google_fuzztest//fuzztest",
        "@com_google_googletest//:gtest_main",
        "@com_google_gutil//gutil:proto_matchers",
        "@com_google_gutil//gutil:status_matchers",
    ],
)

cc_library(
    name = "table",
    srcs = ["table.cc"],
    hdrs = ["table.h"],
    deps = [
        ":frontend",
        ":netkat_cc_proto",
        ":packet_set",
        ":packet_transformer",
        "@com_google_absl//absl/container:btree",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_gutil//gutil:status",
    ],
)

cc_test(
    name = "table_test",
    srcs = ["table_test.cc"],
    deps = [
        ":analysis_engine",
        ":frontend",
        ":gtest_utils",
        ":netkat_cc_proto",
        ":netkat_proto_constructors",
        ":table",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_fuzztest//fuzztest",
        "@com_google_googletest//:gtest_main",
        "@com_google_gutil//gutil:proto_matchers",
        "@com_google_gutil//gutil:status_matchers",
    ],
)

cc_test(
    name = "netkat_test",
    srcs = ["netkat_test.cc"],
    shard_count = 8,
    deps = [
        ":netkat_cc_proto",
        "@com_google_absl//absl/log",
        "@com_google_fuzztest//fuzztest",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "packet_set",
    srcs = ["packet_set.cc"],
    hdrs = ["packet_set.h"],
    deps = [
        ":evaluator",
        ":netkat_cc_proto",
        ":packet_field",
        ":paged_stable_vector",
        "@com_google_absl//absl/algorithm:container",
        "@com_google_absl//absl/container:fixed_array",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_gutil//gutil:status",
    ],
)

cc_test(
    name = "packet_set_test",
    srcs = ["packet_set_test.cc"],
    shard_count = 8,
    deps = [
        ":evaluator",
        ":netkat_proto_constructors",
        ":packet_set",
        "@com_google_absl//absl/base:no_destructor",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/strings",
        "@com_google_fuzztest//fuzztest",
        "@com_google_googletest//:gtest_main",
        "@com_google_gutil//gutil:status_matchers",
        "@com_googlesource_code_re2//:re2",
    ],
)

cc_binary(
    name = "packet_set_benchmark",
    testonly = True,
    srcs = ["packet_set_benchmark.cc"],
    deps = [
        ":netkat_cc_proto",
        ":netkat_proto_constructors",
        ":packet_set",
        "@com_google_absl//absl/strings",
        "@com_google_benchmark//:benchmark_main",
    ],
)

# go/golden-test-with-coverage
cc_test(
    name = "packet_set_test_runner",
    srcs = ["packet_set_test_runner.cc"],
    linkstatic = True,
    deps = [
        ":netkat_proto_constructors",
        ":packet_set",
    ],
)

cmd_diff_test(
    name = "packet_set_diff_test",
    actual_cmd = "$(execpath :packet_set_test_runner)",
    expected = ":packet_set_test.expected",
    tools = [":packet_set_test_runner"],
)

cc_library(
    name = "evaluator",
    srcs = ["evaluator.cc"],
    hdrs = ["evaluator.h"],
    deps = [
        ":netkat_cc_proto",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/log",
    ],
)

cc_test(
    name = "evaluator_test",
    srcs = ["evaluator_test.cc"],
    shard_count = 8,
    deps = [
        ":evaluator",
        ":netkat_cc_proto",
        ":netkat_proto_constructors",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_fuzztest//fuzztest",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "netkat_proto_constructors",
    srcs = ["netkat_proto_constructors.cc"],
    hdrs = ["netkat_proto_constructors.h"],
    deps = [
        ":netkat_cc_proto",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/strings:string_view",
    ],
)

cc_test(
    name = "netkat_proto_constructors_test",
    srcs = ["netkat_proto_constructors_test.cc"],
    shard_count = 8,
    deps = [
        ":netkat_cc_proto",
        ":netkat_proto_constructors",
        "@com_google_absl//absl/strings:string_view",
        "@com_google_fuzztest//fuzztest",
        "@com_google_googletest//:gtest_main",
        "@com_google_gutil//gutil:proto_matchers",
    ],
)

cc_library(
    name = "packet_field",
    srcs = ["packet_field.cc"],
    hdrs = ["packet_field.h"],
    deps = [
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/strings:string_view",
        "@com_google_gutil//gutil:status",
    ],
)

cc_test(
    name = "packet_field_test",
    srcs = ["packet_field_test.cc"],
    shard_count = 4,
    deps = [
        ":packet_field",
        "@com_google_absl//absl/base:no_destructor",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest_main",
        "@com_google_gutil//gutil:status_matchers",
    ],
)

cc_library(
    name = "paged_stable_vector",
    hdrs = ["paged_stable_vector.h"],
)

cc_library(
    name = "analysis_engine",
    srcs = ["analysis_engine.cc"],
    hdrs = ["analysis_engine.h"],
    visibility = [
        "//platforms/networking/orion/routing/netkat:__subpackages__",
    ],
    deps = [
        ":frontend",
        ":packet_set",
        ":packet_transformer",
    ],
)

cc_test(
    name = "analysis_engine_test",
    srcs = ["analysis_engine_test.cc"],
    shard_count = 2,
    deps = [
        ":analysis_engine",
        ":frontend",
        ":gtest_utils",
        "@com_google_fuzztest//fuzztest",
        "@com_google_googletest//:gtest_main",
        "@com_google_gutil//gutil:status_matchers",
    ],
)

cc_library(
    name = "packet_transformer",
    srcs = ["packet_transformer.cc"],
    hdrs = ["packet_transformer.h"],
    deps = [
        ":evaluator",
        ":netkat_cc_proto",
        ":packet_field",
        ":packet_set",
        ":paged_stable_vector",
        "@com_google_absl//absl/algorithm:container",
        "@com_google_absl//absl/container:btree",
        "@com_google_absl//absl/container:fixed_array",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/functional:any_invocable",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/strings:string_view",
        "@com_google_gutil//gutil:status",
    ],
)

cc_test(
    name = "paged_stable_vector_test",
    srcs = ["paged_stable_vector_test.cc"],
    shard_count = 4,
    deps = [
        ":paged_stable_vector",
        "@com_google_fuzztest//fuzztest",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "packet_transformer_test",
    srcs = ["packet_transformer_test.cc"],
    shard_count = 5,
    deps = [
        ":evaluator",
        ":netkat_cc_proto",
        ":netkat_proto_constructors",
        ":packet_set",
        ":packet_transformer",
        "@com_google_absl//absl/base:no_destructor",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/strings",
        "@com_google_fuzztest//fuzztest",
        "@com_google_googletest//:gtest_main",
        "@com_google_gutil//gutil:status_matchers",
        "@com_googlesource_code_re2//:re2",
    ],
)

cc_binary(
    name = "packet_transformer_benchmark",
    testonly = True,
    srcs = ["packet_transformer_benchmark.cc"],
    deps = [
        ":netkat_cc_proto",
        ":netkat_proto_constructors",
        ":packet_transformer",
        "@com_google_absl//absl/strings",
        "@com_google_benchmark//:benchmark_main",
    ],
)

# go/golden-test-with-coverage
cc_test(
    name = "packet_transformer_test_runner",
    srcs = ["packet_transformer_test_runner.cc"],
    linkstatic = True,
    deps = [
        ":netkat_proto_constructors",
        ":packet_transformer",
    ],
)

cmd_diff_test(
    name = "packet_transformer_diff_test",
    actual_cmd = "$(execpath :packet_transformer_test_runner)",
    expected = ":packet_transformer_test.expected",
    tools = [":packet_transformer_test_runner"],
)

cc_library(
    name = "switch",
    srcs = ["switch.cc"],
    hdrs = ["switch.h"],
    deps = [
        ":frontend",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
    ],
)

cc_test(
    name = "switch_test",
    srcs = ["switch_test.cc"],
    deps = [
        ":analysis_engine",
        ":frontend",
        ":switch",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:status_matchers",
        "@com_google_absl//absl/status:statusor",
        "@com_google_googletest//:gtest_main",
        "@com_google_gutil//gutil:status_matchers",
    ],
)
